<resources>
    <string name="app_name">Football Schedule App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Add to favorite</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
